dnl This file was synchronized with template ($Revision: 6 $)
dnl
dnl comments are started with dnl
AC_INIT
dnl project name and version
AM_INIT_AUTOMAKE(checked, 0.1, nodefine)

dnl check for install program
AC_PROG_INSTALL
dnl ... for ocaml
AC_PROG_OCAML
dnl ... for supplementary tools
AC_PROG_OCAML_TOOLS
dnl ... for parser
AC_PROG_CAMLP4
dnl ... for ocamlfind
AC_PROG_FINDLIB
dnl set OCAMLFIND_TRUE an OCAMLFIND_FALSE in Makefile
AM_CONDITIONAL(OCAMLFIND, test "$have_ocamlfind" = "yes")
dnl ... for ocamldsort
AC_PROG_OCAMLDSORT

dnl add configure option "--with-sitelib"
AC_ARG_OCAML_SITELIB

dnl get the objects and executables extension
AC_OBJEXT
AC_EXEEXT
AC_SUBST(CFLAGS)

dnl check for parser module
dnl usage:
dnl module name, file name to use with "#load",
dnl first dir <space> second dir <space> etc.
AC_CHECK_CAMLP4_MODULE(logger, pa_log.cmo, +camlp4 ../logger)
AC_CHECK_CAMLP4_MODULE(Pr_o, pr_o.cmo, +camlp4)
AC_CHECK_CAMLP4_MODULE(q_MLast, q_MLast.cmo, +camlp4)
AC_SUBST(PARSER_INCLUDES)
dnl use empty check just for @PARSER_INCLUDES@ substitution

dnl check for compiler module
dnl usage:
dnl library name, modules to open,
dnl 1st dir <space> 2nd dir <space> etc.
AC_CHECK_OCAML_MODULE(typeutil, View, ../typeutil)
dnl more module checks
dnl use empty check just for @MODULE_INCLUDES@ substitution

dnl add configure option "--enable-log"
AC_ARG_ENABLE(log,[  --enable-log            turn on log messages], LOG="-LOG")
dnl add configure option "--enable-debug"
AC_ARG_ENABLE(debug,[  --enable-debug          turn on debugging], DEBUG="-g")
AC_SUBST(LOG)
AC_SUBST(DEBUG)

dnl produce output files
AC_CONFIG_FILES([
Makefile
regression/Makefile
])
AC_OUTPUT
