dnl This file was synchronized with template ($Revision: 6 $)
dnl
dnl comments are started with dnl
AC_INIT
dnl create supplementary scripts in subdirectory
AC_CONFIG_AUX_DIR(config)
dnl determine system type
AC_CANONICAL_SYSTEM
dnl project name and version
AM_INIT_AUTOMAKE(checked, 0.1, nodefine)

dnl add custom m4 functions
m4_sinclude(m4/acinclude.m4)

dnl check for install program
AC_PROG_INSTALL
dnl ... for ocaml
AC_PROG_OCAML
dnl ... for supplementary tools
AC_PROG_OCAML_TOOLS
dnl ... for parser
AC_PROG_CAMLP4
dnl ... for ocamlfind
AC_PROG_FINDLIB
dnl set OCAMLFIND_TRUE an OCAMLFIND_FALSE in Makefile
AM_CONDITIONAL(OCAMLFIND, test "$have_ocamlfind" = "yes")
dnl ... for ocamldsort
AC_PROG_OCAMLDSORT

dnl add configure option "--with-sitelib"
AC_ARG_OCAML_SITELIB

AC_SUBST(CFLAGS)

dnl check for parser module
dnl usage:
dnl module name, file name to use with "#load",
dnl first dir <space> second dir <space> etc., module homepage.
AC_CHECK_CAMLP4_MODULE(logger, pa_log.cmo, +camlp4 ../logger/src, http://oops.tepkom.ru/projects/logger)
AC_SUBST(PARSER_INCLUDES)

dnl check for compiler module
dnl usage:
dnl library name, modules to open,
dnl 1st dir <space> 2nd dir <space> etc., library homepage.
AC_CHECK_OCAML_MODULE(typeutil, View, ../typeutil/src, http://oops.tepkom.ru/projects/typeutil)
dnl more module checks
dnl AC_CHECK_OCAML_MODULE(libname, Module1 Module2, ../libdir, http://www.example.com/libname)
AC_SUBST(MODULE_INCLUDES)
AC_SUBST(EXTRA_CMA)

dnl add configure option "--enable-log"
AC_ARG_ENABLE(log,[  --enable-log            turn on log messages], LOG="-LOG")
dnl add configure option "--enable-debug"
AC_ARG_ENABLE(debug,[  --enable-debug          turn on debugging], DEBUG="-g")
AC_SUBST(LOG)
AC_SUBST(DEBUG)

AC_SUBST(ac_aux_dir)
dnl produce output files
AC_CONFIG_FILES([
Makefile
doc/Makefile
src/Makefile
regression/Makefile
])
AC_OUTPUT
